<resources>
    <string name="app_name">TetrisBattle</string>
    <string name="point">Point :</string>
    <string name="tetris_battle">TETRIS\nBATTLE</string>
    <string name="tap_to_start">Tap To Start</string>
    <string name="play_game">PLAY GAME</string>
    <string name="exit">EXIT</string>
    <string name="game_over">Game Over\nTotal Point :</string>
    <string name="highest_score">\nHighest score :</string>
    <string name="play_again">Play Again</string>
    <string name="setting">Setting</string>
    <string name="need_support_cube">Support Cube</string>
    <string name="confirm_exit">Are you sure you want to leave?</string>
    <string name="cancel">Cancel</string>
    <string name="win_high_score">Brilliant!! New high score</string>
    <string name="imporve_yourself">\nYou imporve yourself</string>
    <string name="music">Music</string>
    <string name="level1">Level 1</string>
    <string name="practise">Practise</string>
    <string name="coming_soon">Coming Soon...</string>
    <string name="easy">Easy</string>
    <string name="normal">Normal</string>
    <string name="difficult">Hard</string>
    <string name="advanced">advanced</string>
    <string name="expert">expert</string>
    <string name="confirm">Confirm</string>
    <string name="level">LEVEL</string>
    <string name="traget">Target :</string>
    <string name="next_level">Next</string>
    <string name="wanna_try_again">Wanna try again?</string>
    <string name="next_time">Next time</string>
    <string name="go_update">Go update</string>
</resources>