<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.welcome.WelcomeActivity">

    <com.game.tetris.custom.IntroFontTextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/tetris_battle"
        android:textColor="@color/white"
        android:textSize="80sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/menu_view"
        android:layout_marginTop="80dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="vertical"
        android:visibility="invisible"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.game.tetris.custom.IntroFontTextView
            android:id="@+id/play_game"
            android:layout_gravity="center"
            android:textColor="#03A9F4"
            android:textSize="40sp"
            android:text="@string/play_game"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <com.game.tetris.custom.IntroFontTextView
            android:id="@+id/exit"
            android:layout_gravity="center"
            android:textColor="#AFF380"
            android:textSize="40sp"
            android:layout_marginTop="15dp"
            android:text="@string/exit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>


    <com.game.tetris.custom.IntroFontTextView
        android:id="@+id/tap_to_start"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:gravity="bottom|center"
        android:padding="50sp"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:text="@string/tap_to_start"
        android:layout_width="0dp"
        android:layout_height="0dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>