<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingBottom="25dp"
    android:layout_width="250dp"
    android:layout_height="400dp">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="250dp"
        android:layout_height="match_parent"
        android:layout_marginTop="25dp"
        android:background="@drawable/game_over_dialog_bg"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/logo">

        <com.game.tetris.custom.IntroFontRadioButton
            android:id="@+id/easy_btn"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:buttonTint="@color/white"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="40dp"
            android:gravity="center|start"
            android:paddingStart="15dp"
            android:text="@string/easy"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:layout_width="0dp"
            android:layout_height="48dp" />

        <com.game.tetris.custom.IntroFontRadioButton
            android:id="@+id/normal_btn"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/easy_btn"
            android:buttonTint="@color/white"
            android:layout_marginHorizontal="20dp"
            android:gravity="center|start"
            android:paddingStart="15dp"
            android:text="@string/normal"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:layout_width="0dp"
            android:layout_height="48dp" />
        <com.game.tetris.custom.IntroFontRadioButton
            android:id="@+id/difficult_btn"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/normal_btn"
            android:buttonTint="@color/white"
            android:layout_marginHorizontal="20dp"
            android:gravity="center|start"
            android:paddingStart="15dp"
            android:text="@string/difficult"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:layout_width="0dp"
            android:layout_height="48dp" />

        <com.game.tetris.custom.IntroFontRadioButton
            android:id="@+id/advanced_btn"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/difficult_btn"
            android:buttonTint="@color/white"
            android:layout_marginHorizontal="20dp"
            android:gravity="center|start"
            android:paddingStart="15dp"
            android:text="@string/advanced"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:layout_width="0dp"
            android:layout_height="48dp" />

        <com.game.tetris.custom.IntroFontRadioButton
            android:id="@+id/expert_btn"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/advanced_btn"
            android:buttonTint="@color/white"
            android:layout_marginHorizontal="20dp"
            android:gravity="center|start"
            android:paddingStart="15dp"
            android:text="@string/expert"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:layout_width="0dp"
            android:layout_height="48dp" />


        <com.game.tetris.custom.IntroFontTextView
            android:id="@+id/confirm_button"
            android:layout_width="0dp"
            android:layout_marginHorizontal="15dp"
            android:paddingVertical="10dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/game_mode_btn_bg"
            android:gravity="center"
            android:text="@string/confirm"
            android:textColor="#333333"
            android:textSize="22sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/expert_btn"
            android:layout_marginBottom="10dp"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/logo"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:src="@drawable/app_logo_round"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>