<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="300dp"
    android:layout_height="225dp">


    <androidx.constraintlayout.widget.ConstraintLayout
        app:layout_constraintTop_toTopOf="@id/logo"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="25dp"
        android:background="@drawable/game_over_dialog_bg"
        android:layout_width="300dp"
        android:layout_height="200dp">

        <com.game.tetris.custom.IntroFontTextView
            android:layout_marginTop="50sp"
            android:id="@+id/title"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_width="0dp"
            android:textSize="20sp"
            android:gravity="center"
            android:textColor="@color/white"
            android:text="@string/game_over"
            android:layout_height="wrap_content"/>

        <com.game.tetris.custom.IntroFontTextView
            android:id="@+id/cancel_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:gravity="center"
            android:textSize="18sp"
            android:text="@string/exit"
            android:textColor="@color/white"
            android:background="@drawable/dialog_left_button_selector"
            app:layout_constraintRight_toLeftOf="@id/replay_button"
            android:layout_width="0dp"
            android:layout_height="40dp"/>

        <com.game.tetris.custom.IntroFontTextView
            android:id="@+id/replay_button"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:background="@drawable/dialog_right_button_selector"
            android:gravity="center"
            android:text="@string/play_again"
            android:textColor="@color/white"
            app:layout_constraintLeft_toRightOf="@id/cancel_button"
            android:layout_width="0dp"
            android:layout_height="40dp"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/logo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:src="@drawable/app_logo_round"
        android:layout_width="60dp"
        android:layout_height="60dp"/>




</androidx.constraintlayout.widget.ConstraintLayout>